3 May 2006: Wouter
	- forward of 2.3.4 RELNOTES into trunk.
	- debug log statements to track xfrd request rounds.
	- removed memleak from handle_passed_packet in xfrd.
	- faster find_zone in difffile.c.
	- nsd-patch writes commit log entries into zone file.

2 May 2006: Wouter
	- ifdef inet6 back on ss_family usage in server.c.
	- nsd-checkconf ip6 ifdefs improved.
	- xfrd tries servers 3 rounds, then waits for next retry.

1 May 2006: Wouter
	- off_t used for 64bit fileio. 
	- searches for smallest unused part and sets diff_skip to that.
	- doc comment near the region_free_all for every query about 
	  malloc speed.
	- null ptr in strcmp does not work on bsd, fixed nsd-checkconf.
	- made nsd.conf.sample.in so the sample gets prefix-corrected.
	- removed nsd.zones.sample.
	- makedist.sh added manual pages for nsd-xfer nsd-patch.
	- install/uninstall nsd-patch, nsd-checkconf and manpage. 
	  small update readme.

28 Apr 2006: Wouter
	- ixfr >64k in xfrd.
	- fixed length of new commit parts.
	- fixed multiple ipc reads in xfrd.
	- fixed multiple packet ixfr read in diff file.
   Miek:
	- Forward port fixes for nsd-xfer and nsd-notify

27 Apr 2006: 
   Wouter:
	- nsec3 review fixes.
	- diff file format expanded for >64kb transfer support.
	- diff reader adjusted for >64kb.
   Jelte:
	- small non-null options check in nsd.c.
   Miek:
	- updated nsd-checkconf for zone parse shell script support.

25 Apr 2006: Wouter
	- Tests on NSEC3 code. Fixed that the unsecure delegations also
	  have _ds_ parent nsec3 prehashes, so that they get proper NSEC3s.
	  NSD will serve NSEC3s to prove 'opt-out' also if the opt-out bit
	  is (erroneously) not set.
	- For the 05pre2 draft section 5.4.8.1. QTYPE is NSEC3, only NSEC3
	  RRsets at name. Fixed that RRSIGs present do not matter.
	  And also the closest encloser proof in that case fixed.
	  If wildcard exists below zone apex servfails (cannot disprove
	  it and NSD cannot instantiate the wildcard at that point).

24 Apr 2006: Miek