@@ -36,7 +36,9 @@
 
 #include "nsd.h"
 #include "options.h"
-
+#ifdef TSIG
+#include "tsig.h"
+#endif /* TSIG */
 
 /* The server handler... */
 static struct nsd nsd;
@@ -681,6 +683,12 @@ main (int argc, char *argv[])
 			endpwent();
 		}
 	}
+
+#ifdef TSIG
+	if(!tsig_init(nsd.region))
+		error("init tsig failed");
+	key_options_tsig_add(nsd.options);
+#endif /* TSIG */
 
 	/* Set up the logging... */
 	log_open(LOG_PID, FACILITY, log_filename);
